ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trabajofinal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
    - host: trabajofinal.local      # <-- Cambiar por dominio real
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: trabajofinal-services
                port:
                  number: 80
